--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "nuxt-icon": "^0.4.1",
         "pinia": "^2.1.7",
         "prisma": "^5.14.0",
+        "split-type": "^0.3.4",
         "v-calendar": "^3.0.3",
         "zod": "^3.23.8"
     },
