--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "nuxt": "^3.11.0",
         "nuxt-file-storage": "^0.2.3",
         "prettier": "3.3.0",
+        "prisma": "^5.15.0",
         "prisma-erd-generator": "^1.11.2"
     },
     "dependencies": {
@@ -35,7 +36,7 @@
         "@nuxtjs/fontaine": "^0.4.1",
         "@nuxtjs/google-fonts": "^3.0.2",
         "@pinia/nuxt": "^0.4.11",
-        "@prisma/client": "^5.14.0",
+        "@prisma/client": "^5.15.0",
         "@types/jsonwebtoken": "^9.0.6",
         "bcrypt": "^5.1.1",
         "dotenv": "^16.4.5",
@@ -43,8 +44,8 @@
         "jsonwebtoken": "^9.0.2",
         "lenis": "^1.1.1",
         "nuxt-icon": "^0.4.1",
+        "nuxt-swiper": "latest",
         "pinia": "^2.1.7",
-        "prisma": "^5.14.0",
         "split-type": "^0.3.4",
         "v-calendar": "^3.0.3",
         "zod": "^3.23.8"
