--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "version": "0.1",
     "scripts": {
         "build": "nuxt build",
-        "dev": "nuxt dev --port 4006",
+        "dev": "nuxt dev --port 4006 --host",
         "generate": "nuxt generate",
         "preview": "nuxt preview",
         "postinstall": "nuxt prepare",
