--- a/package.json
+++ b/package.json
@@ -42,10 +42,11 @@
         "dotenv": "^16.4.5",
         "gsap": "latest",
         "jsonwebtoken": "^9.0.2",
-        "lenis": "^1.1.1",
+        "lenis": "^1.1.3",
         "nuxt-icon": "^0.4.1",
         "nuxt-swiper": "latest",
         "pinia": "^2.1.7",
+        "smooth-scrollbar": "^8.8.4",
         "split-type": "^0.3.4",
         "v-calendar": "^3.0.3",
         "zod": "^3.23.8"
