--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "jsonwebtoken": "^9.0.2",
         "lenis": "^1.1.3",
         "nuxt-icon": "^0.4.1",
+        "nuxt-mailer": "^0.11.0",
         "nuxt-swiper": "latest",
         "pinia": "^2.1.7",
         "smooth-scrollbar": "^8.8.4",
