--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nuxt/ui": "^2.16.0",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@nuxtjs/i18n": "^8.3.1",
+    "@sidebase/nuxt-auth": "^0.7.2",
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^20.4.5",
     "@vueuse/core": "^10.10.0",
