--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,7 @@
-JWT_TOKEN_SECRET=""
 DATABASE_URL=""
+
+AUTH_ORIGIN="http://localhost:4006"
+AUTH_SECRET="18f0acb05bf8864b694cc46f1107e9c5"
+
+NUXT_MAILER_USER=
+NUXT_MAILER_PASS=
