--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "prisma_starter",
   "private": true,
   "version": "0.1",
+  "prisma": {
+    "seed": "node prisma/seed.mjs"
+  },
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev --port 4006 --host",
@@ -15,31 +18,30 @@
     "lint:fix": "eslint --ext .js,.vue,.ts --ignore-path .gitignore . --fix"
   },
   "devDependencies": {
+    "@hebilicious/authjs-nuxt": "^0.3.5",
     "@nuxt/ui": "^2.17.0",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@nuxtjs/i18n": "^8.3.1",
-    "@sidebase/nuxt-auth": "^0.7.2",
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^20.4.5",
     "@vueuse/core": "^10.10.0",
-    "@vueuse/nuxt": "^10.10.0",
+    "@vueuse/nuxt": "^10.11.0",
     "nuxt": "^3.12.0",
-    "nuxt-file-storage": "^0.2.6",
-    "prettier": "3.3.2",
-    "prisma": "^5.16.1",
-    "prisma-erd-generator": "^1.11.2"
+    "nuxt-file-storage": "^0.2.7",
+    "nuxt-icon": "^0.6.10",
+    "prettier": "3.3.3",
+    "prisma": "^5.17.0"
   },
   "dependencies": {
     "@iconify-json/solar": "^1.1.9",
     "@iconify/vue": "^4.1.2",
     "@nuxtjs/fontaine": "^0.4.3",
     "@nuxtjs/google-fonts": "^3.2.0",
-    "@prisma/client": "^5.16.1",
+    "@prisma/client": "^5.17.0",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "gsap": "latest",
-    "lenis": "^1.1.4",
-    "nuxt-icon": "^0.6.10",
+    "lenis": "^1.1.6",
     "nuxt-mailer": "^0.11.0",
     "nuxt-swiper": "latest",
     "split-type": "^0.3.4",
