--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@types/node": "^20.4.5",
     "@vueuse/core": "^10.10.0",
     "@vueuse/nuxt": "^10.11.0",
-    "nuxt": "^3.12.0",
+    "nuxt": "3.12.0",
     "nuxt-file-storage": "^0.2.7",
     "nuxt-icon": "^0.6.10",
     "prettier": "3.3.3",
