--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "sortablejs": "^1.15.2",
     "split-type": "^0.3.4",
     "v-calendar": "^3.0.3",
+    "vue-dndrop": "^1.3.1",
     "zod": "^3.23.8"
   },
   "overrides": {
